<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topic_activity_monitor_msgs</name>
  <version>0.1.0</version>
  <description>Message Definitions for topic_activity_monitor</description>
  <maintainer email="ros2@danbrooks.net">Dan Brooks</maintainer>
  <license>Apache2</license>

  <depend> std_msgs </depend>

  <build_depend>    rosidl_default_generators </build_depend>
  <exec_depend>     rosidl_default_runtime    </exec_depend>
  <member_of_group> rosidl_interface_packages </member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
